<resources>
    <string name="app_name">NutriCart</string>
    <string name="onboarding_screen_1">Welcome to NutriCart</string>
    <string name="onboarding_screen_1_body">\nDiscover exclusive deals and trending products tailored just for you.</string>
    <string name="onboarding_screen_btn1">skip</string>
    <string name="onboarding_screen_btn2">Next</string>
    <string name="onboarding_screen_2">Smart Browsing</string>
    <string name="onboarding_screen_2_body">\nTailor-made fertilizer recommendations for your crops. Enhance yields with precision and efficiency.</string>
    <string name="onboarding_screen_3">Secure Shopping</string>
    <string name="onboarding_screen_3_body">\nShop with confidence knowing your purchases are secure and supported.</string>
    <string name="onboarding_screen_3_btn">Get Started</string>
    <string name="login_txt1">Welcome back</string>
    <string name="login_txt2">Login to your account</string>
    <string name="login_txt3">\tEnter your username</string>
    <string name="login_txt4">\tEnter your password</string>
    <string name="login_txt5">Forget password ? </string>
    <string name="login_txt6">Login</string>
    <string name="login_txt7">Don’t have an Account? Create Account</string>
    <string name="signup_txt1">Register</string>
    <string name="signup_txt2">Create your new account</string>
    <string name="signup_txt3">\tEnter your name</string>
    <string name="signup_txt4">\tEnter username</string>
    <string name="signup_txt5">\tEnter your email</string>
    <string name="signup_txt6">\tCreate password</string>
    <string name="signup_txt7">\tRe-enter password</string>
    <string name="signup_txt8">By signing up you agree to our Terms and Conditions and Privacy Policy</string>
    <string name="signup_txt9">Register</string>
    <string name="signup_txt10">Already have an account? Login</string>
    <string name="home_screen_txt1">Welcome, Udeep !</string>
    <string name="home_screen_txt2">Welcome to NutriCart</string>
    <string name="home_screen_txtt1">Thalana batu</string>
    <string name="home_screen_txtt2">Beans</string>
    <string name="home_screen_txtt3">Beetroot</string>
    <string name="home_screen_txtt4">karawila</string>
    <string name="home_screen_txtt5">Brinjals</string>
    <string name="home_screen_txtt6">Cabbage</string>
    <string name="home_screen_txt4">100 seeds</string>
    <string name="home_screen_txt5">Rs. 200.00</string>
    <string name="detail_screen_txt1">Product Details</string>
    <string name="detail_screen_txt2">Thalana batu -  100 seeds</string>
    <string name="detail_screen_txt3">Thalana Batu (Solanum trilobatum) is a medicinal plant in Sri Lanka. Its leaves and fruits are used in Ayurveda for coughs, asthma, and throat problems,
        and it is also eaten as a nutritious vegetable.</string>
    <string name="detail_screen_txt4">Buy Now</string>
    <string name="cart_screen_txt1">My Cart</string>
    <string name="cart_screen_txt2">Delivery Address</string>
    <string name="cart_screen_txt3">\tEnter delivery address</string>
    <string name="cart_screen_txt4">Total:\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tRs. 200.00</string>
    <string name="cart_screen_txt5">Place Order</string>
    <string name="payment_txt1">Payment</string>
    <string name="payment_txt2">Pay Now</string>
    <string name="payment_success_txt1">Payment Success !</string>
</resources>