<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green1"
    tools:context=".Login_Screen">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="485dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/login_txt1"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="185dp"
                android:layout_height="23dp"
                android:text="@string/login_txt2"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="text"
                android:layout_marginTop="30dp"
                android:hint="@string/login_txt3"
                android:textSize="15sp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:background="@drawable/rounded_edittext_background"/>

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                android:hint="@string/login_txt4"
                android:textSize="15sp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:background="@drawable/rounded_edittext_background"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_txt5"
                android:textAlignment="viewEnd"
                android:layout_marginRight="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="15dp"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:text="@string/login_txt6"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginRight="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/green1"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/group_13"
                android:layout_marginRight="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/group_39"
                android:layout_marginRight="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="45dp"
                android:text="@string/login_txt7" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
