<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding_Screen_1">

    <!-- Image Section -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="356dp"
            android:layout_height="270dp"
            android:layout_marginTop="125dp"
            android:src="@drawable/welcome_screen" />
    </LinearLayout>

    <!-- Text Section -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_screen_1"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="300dp"
            android:layout_height="105dp"
            android:text="@string/onboarding_screen_1_body"
            android:textAlignment="center"
            android:textSize="18dp" />
    </LinearLayout>

    <!-- Buttons Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0">



        <!-- Button 1 & 2 -->
        <Button
            android:id="@+id/button"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="20dp"
            android:background="@color/bgcolor_btn"
            android:text="@string/onboarding_screen_btn1"
            android:textColor="@color/gray1"
            android:textStyle="normal" />

        <Button
            android:id="@+id/button2"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="22dp"
            android:background="@color/bgcolor_btn"
            android:text="@string/onboarding_screen_btn2"
            android:textColor="@color/green1"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
